# showdoc_mcp

./: .cursorrules  .gitignore  README.md  pyproject.toml  requirements.txt  showdoc_nodes_110.json  user_rules_template.md
android_codegen/: ARCHITECTURE.md  README.md  README_测试.md  TRANSLATION.md  __init__.py  entity_generator.py  entity_schema.py  generator.py  okhttp_config.py  repository_generator.py  requirements.txt  retrofit_generator.py  test.py  utils.py  version_control.py
api_docs/: README.md  api_example_01.txt  api_example_02.txt  api_example_02_not_login.txt  api_example_03.txt  api_example_03_not_login.txt  api_example_04.txt  api_example_04_not_login.txt  api_example_05_not_login.txt  项目预研.txt
archive_tools/: README.md  __init__.py  mcp_server.py  requirements.txt  server.py  test.py  test_results.md
core/: README.md  README_测试.md  __init__.py  captcha_solver.py  client.py  cookie_manager.py  exceptions.py  models.py  parser.py  requirements.txt  simple_captcha_solver.py  test.py  test_simple.py  使用说明.md  快速测试.md  需求文档.md
cursor_agents/: README.md  __init__.py  client.py  test.py
file_operations/: README.md  __init__.py  backup_manager.py  batch_operations.py  code_operations.py  content_analyzer.py  content_processor.py  dependency_analyzer.py  exceptions.py  file_comparison.py  file_search.py  file_utils.py  file_validator.py  format_handlers.py  git_integration.py  mcp_server.py  path_resolver.py  project_analyzer.py  safe_writer.py  temp_manager.py  template_engine.py  test.py
flutter_codegen/: README.md  __init__.py  dio_config.py  dio_service_generator.py  entity_generator.py  entity_schema.py  generator.py  repository_generator.py  test.py  utils.py  version_control.py
mcp_server/: README.md  __init__.py  mcp_server.py  server.py  test_mcp.py
mcp_showdoc/: README.md  __init__.py  mcp_server.py  server.py  test_mcp.py
mcp_showdoc_android/: README.md  __init__.py  mcp_server.py  server.py
scripts/: install_startup.reg  start_mcp_service.bat
showdoc_android/: dependencies.gradle.kts
showdoc_android/.android_codegen_cache/: file_index.json
showdoc_android_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+13 files in other folders)
