[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "showdoc-android-mcp"
version = "0.1.0"
description = "ShowDoc -> Android codegen MCP server (core + android_codegen + mcp_showdoc_android)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "fengli", email = "dev@example.com" }
]
dependencies = [
  "requests>=2.28.0",
  "mcp>=0.1.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
  "rich>=13.0.0",
]

[project.scripts]
showdoc-android-mcp = "mcp_showdoc_android.mcp_server:main"

[tool.setuptools]
packages = ["core", "android_codegen", "mcp_showdoc_android"]


