[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-mcp"
version = "1.0.0"
description = "通用个人 MCP 服务器，整合 ShowDoc、Cursor Agents 等功能模块"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "personal", email = "dev@example.com" }
]
dependencies = [
  "requests>=2.28.0",
  "mcp>=0.1.0",
  "opencv-python>=4.8.0",
  "numpy>=1.24.0",
  "ddddocr>=1.4.0",
  "pyzipper>=0.3.6",
  "py7zr>=0.21.0",
  "rarfile>=4.1",
]

[project.optional-dependencies]
dev = [
  "rich>=13.0.0",
]

[project.scripts]
personal-mcp = "mcp_server.mcp_server:main"

[tool.setuptools]
packages = ["core", "android_codegen", "flutter_codegen", "mcp_server", "cursor_agents", "archive_tools"]


